# heerr

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DECISIONLOG.md  README.md  ROADMAP.md  docker-compose.snippet.yml
.github/: dependabot.yml
.github/workflows/: android-ci.yml  android-publish.yml  backend-ci.yml  docker-publish.yml
android/: CLAUDE.md  README.md  SMOKE-TEST.md
android/app/: .gitignore  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
android/docs/: CHANGELOG.md  CONTEXT.md  DEBT.md  DECISIONLOG.md  DOWNLOADSSCREEN.md  HOMESCREEN.md  LIBRARYSCREEN.md  NOWPLAYING.md  PLAN.md  ROADMAP.md  ROADMAP_OFFLINE.md  ROADMAP_PLAYLISTS.md  ROADMAP_STREAMER.md  SETTINGSSCREEN.md  SMOKE-TEST.md  smoke-test.md  smoke_playlists.md  smoke_streamer.md
backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_jobs_display_name.py  0003_ytmusic_rename.py  0004_users.py  0005_backfill_users.py  0006_per_user_jobs_index.py  0007_tokens_last_used_at.py  0008_drop_system_admin_default.py  0009_drop_tokens_owner_label.py  0010_downloads_user_id.py  0011_users_settings.py  0012_users_profile.py  0013_podcasts.py  0014_jobs_episode.py
backend/app/: cli.py  config.py  db.py  logging_config.py  main.py
backend/app/api/: context.py  deps.py  middleware.py
backend/app/api/v1/: admin.py  auth.py  download.py  health.py  library.py  podcasts.py  preview.py  profile.py  queue.py  recommend.py  router.py  search.py  settings.py  status.py
backend/app/models/: __init__.py  download.py  job.py  podcast_channel.py  podcast_episode.py  podcast_progress.py  podcast_subscription.py  token.py  user.py
backend/app/schemas/: auth.py  download.py  job.py  library.py  podcast.py  profile.py  recommend.py  search.py  settings.py  token.py  user.py
backend/app/services/: feeds.py  jobs.py  navidrome_auth.py  podcast_download.py  podcast_search.py  podcastindex.py  preview_resolver.py  range_file.py  spotdl_runner.py  spotify.py  tag_editor.py  workers.py  ytmusic.py
backend/app/services/recommenders/: base.py  factory.py  fallback_engine.py  lastfm_engine.py  listenbrainz_engine.py  yt_resolver.py  ytmusic_engine.py
backend/docs/: CHANGELOG.md  CONTEXT.md  DEBT.md  DECISIONLOG.md  PLAN.md  PODCASTS.md  ROADMAP.md  SMOKE-TEST.md
backend/tests/: conftest.py  migration_guard.py  test_admin.py  test_auth.py  test_auth_login.py  test_auth_logout.py  test_cli.py  test_config.py  test_db_session.py  test_docs_gate.py  test_download.py  test_fallback_engine.py  test_feeds.py  test_health.py  test_jobs_service.py  test_lastfm_engine.py  test_library_delete.py  test_library_edit.py  test_listenbrainz_engine.py  test_logging.py  test_max_body_size.py  test_migration_0001.py  test_migration_0002.py  test_migration_0003.py  test_migration_0004.py  test_migration_0005.py  test_migration_0006.py  test_migration_0007.py  test_migration_0008.py  test_migration_0009.py  test_migration_0010.py  test_migration_0011.py  test_migration_0012.py  test_migration_head_guard.py  test_migration_podcasts.py  test_models_match_schema.py  test_navidrome_auth.py  test_podcast_download.py  test_podcast_download_service.py  test_podcast_episodes.py  (+26 more)
backend/tests/fixtures/: silence.flac  silence.m4a  silence.opus
graphify-out/: .graphify_labels.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-13/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
(+482 files in other folders)
