[tool.poetry]
name = "heerr-backend"
version = "0.1.0"
description = "heerr — music request app backend (FastAPI + spotDL)"
authors = ["Aashish Agarwal <asag5462@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
pydantic-settings = "^2.5"
asyncpg = "^0.30"
greenlet = "^3"
fastapi = "^0.115"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
testcontainers = {version = "^4.8", extras = ["postgres"]}
psycopg = {version = "^3.2", extras = ["binary"]}
pytest-asyncio = "^0.24"
httpx = "^0.28"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
