[tool.poetry]
name = "heerr-backend"
version = "0.1.0"
description = "heerr — music request app backend (FastAPI + spotDL)"
authors = ["Aashish Agarwal <asag5462@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
pydantic-settings = "^2.5"
asyncpg = ">=0.30,<0.32"
psycopg = {version = "^3.2", extras = ["binary"]}
greenlet = "^3"
fastapi = ">=0.117,<1.0"
starlette = ">=0.49.1"
typer = ">=0.15,<0.27"
uvicorn = {version = ">=0.32,<0.50", extras = ["standard"]}
httpx = "^0.28"
ytmusicapi = ">=0.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
testcontainers = {version = "^4.8", extras = ["postgres"]}
psycopg = {version = "^3.2", extras = ["binary"]}
pytest-asyncio = "^0.24"
ruff = ">=0.7,<0.16"
mypy = "^1.13"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long — formatter handles wraps; ignore long URLs/strings
    "B008",   # function call in default arg — FastAPI Depends() idiom
    "SIM117", # nested with — sometimes clearer than combined
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_defs = true
exclude = ["alembic/versions", "tests/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "spotdl.*", "ytmusicapi.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
